--- a/Final_Work/Final_Work/Final_Work.csproj
+++ b/Final_Work/Final_Work/Final_Work.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ai_algorithem.cs" />
     <Compile Include="bestscores.cs">
       <SubType>Form</SubType>
     </Compile>
